# shadyman

./: .gitignore  0.json  CMakeLists.txt  README.md  TODO  level_editor.py  main.cpp  main.js  main.wasm  run.sh
data/maps/: 0.json
data/shaders/: screenShader.frag
include/SDL2/: SDL_config-x86_64.h
src/: anim.hpp  app.h  app.hpp  assets.cpp  assets.hpp  blasters.cpp  blasters.hpp  buttons.hpp  constants.hpp  entities.cpp  entities.hpp  game.cpp  game.hpp  particles.cpp  particles.hpp  player.cpp  player.hpp  sparks.hpp  tiles.cpp  tiles.hpp  util.hpp  vec2.hpp
src/core/: texture.h  texture.hpp  timer.cpp  timer.hpp  util.hpp  vec2.hpp
